<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/head_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/app_name"
        android:src="@drawable/login_head" 
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20sp"
        android:background="@drawable/user_name"
        android:hint="@string/input_username"
        android:paddingLeft="45dip"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:inputType="number"
        android:textStyle="normal" />

    
    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dip"
        android:background="@drawable/password"
        android:hint="@string/input_password"
        android:inputType="text"
        android:paddingLeft="45dip"
        android:textColorHint="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnGetPwd"
        android:layout_width="60sp"
        android:layout_height="50sp"
        android:layout_gravity="right"
        android:background="@drawable/btn_get_pwd_s" />

    <EditText
        android:id="@+id/productkey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dip"
        android:background="@drawable/password"
        android:hint="@string/input_producekey"
        android:inputType="text"
        android:paddingLeft="45dip"
        android:text=""
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:visibility="visible" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dip"
        android:background="@drawable/button_login_" />

</LinearLayout>